--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2cd
+        uses: actions/checkout@v2
 
       - name: Setup Node
         uses: actions/setup-node@v1
