Fix base path for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yosefmostafa.github.io/YumxDeletion",
+  "homepage": ".",
   "name": "YumxDeletion",
   "private": true,
   "version": "0.0.0",
